# BioSim_G09_Michael_Daniel

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
.tox/py36/: .tox-config1
.tox/py36/include/: python3.6m
.tox/py36/lib/python3.6/: LICENSE.txt  __future__.py  _bootlocale.py  _collections_abc.py  _dummy_thread.py  _weakrefset.py  abc.py  base64.py  bisect.py  codecs.py  collections  copy.py  (+39 more)
doc/: about.rst  animals.rst  api_reference.rst  assignment.rst  cell.rst  conf.py  examples.rst  further.rst  index.rst  island.rst  simulation.rst
doc/_build/doctrees/: about.doctree  animals.doctree  api_reference.doctree  assignment.doctree  cell.doctree  environment.pickle  examples.doctree  further.doctree  index.doctree  island.doctree  modules.doctree  simulation.doctree
doc/_build/html/: .buildinfo  about.html  animals.html  api_reference.html  assignment.html  cell.html  examples.html  further.html  genindex.html  index.html  island.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  simulation.html
examples/: check_sim_2.py  example_sim.py  population_generator.py  video_making.py
pip-wheel-metadata/biosim.dist-info/: METADATA
project documents/: classoverview.txt  ecosystem.txt  fauna.txt  landscape.txt  projectplan.txt  projectstructure.txt
src/biosim/: __init__.py  animals.py  cell.py  cycle.py  island.py  landscape.py  simulation.py
src/biosim.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_animals.py  test_biosim_interface.py  test_cell.py  test_cycle.py  test_island.py  test_landscape.py  test_simulation.py
(+15 files in other folders)
